# homework_30

./: README.md  pyproject.toml
ads/: serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py
homework_30/: settings.py  urls.py
selections/: models.py  permissions.py  serializers.py  views.py
selections/migrations/: 0001_initial.py  0002_alter_selection_owner.py
users/: models.py  urls.py
users/migrations/: 0001_initial.py
